--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "scroll": "^2.0.3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "svg-inline-loader": "^0.8.0",
+    "vue-svg-loader": "^0.11.0",
     "zenscroll": "^4.0.2"
   },
   "devDependencies": {
