--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "nuxt": "^2.0.0",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "scroll": "^2.0.3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "svg-inline-loader": "^0.8.0",
-    "vue-svg-loader": "^0.11.0",
     "zenscroll": "^4.0.2"
   },
   "devDependencies": {
