--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "deploy": "gulp deploy:production"
   },
   "dependencies": {
     "axios": "^0.18.0",
