--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "emailjs-com": "^2.3.2",
     "gulp": "^3.9.1",
     "gulp-sftp": "^0.1.5",
     "nuxt": "^2.0.0",
