--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "scroll": "^2.0.3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "v-click-outside": "^2.0.2",
     "vue-svg-loader": "^0.11.0",
     "vue-yandex-maps": "^0.7.15",
     "zenscroll": "^4.0.2"
