--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "emailjs-com": "^2.3.2",
     "gulp": "^3.9.1",
     "gulp-sftp": "^0.1.5",
+    "jsonp": "^0.2.1",
     "nuxt": "^2.0.0",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
