--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@nuxtjs/yandex-metrika": "^0.1.1",
     "axios": "^0.18.0",
     "emailjs-com": "^2.3.2",
+    "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "gulp-sftp": "^0.1.5",
+    "gulp-ssh": "^0.7.0",
     "jsonp": "^0.2.1",
     "nuxt": "^2.0.0",
     "pug": "^2.0.3",
