--- a/.drone.yml
+++ b/.drone.yml
@@ -1,38 +1,41 @@
-pipeline:
-    install:
-      image: node:alpine
-      commands:
-        - npm install
-      when:
-        branch:
-          include: [ master ]
-        event:
-          - push
-          - pull_request
+kind: pipeline
+name: default
 
-    build/client:
-      image: node:alpine
-      environment:
-        - NODE_ENV=production
-      secrets: [ ssh_key ]
-      commands:
-        - npm run generate
-      when:
-        branch:
-          include: [ master ]
-        event:
-          - push
-          - pull_request
+steps:
+- name: install
+  image: node:alpine
+  commands:
+    - npm install
+  when:
+    branch:
+      include: [ master ]
+    event:
+      - push
+      - pull_request
 
-    deploy:
-      image: node:alpine
-      secrets: [ ssh_key ]
-      commands:
-        - npm install gulp
-        - npm run deploy
-      when:
-        branch:
-          include: [ master ]
-        event:
-          - push
-          - pull_request
+- name: build/client
+  image: node:alpine
+  environment:
+    - NODE_ENV=production
+  secrets: [ ssh_key ]
+  commands:
+    - npm run generate
+  when:
+    branch:
+      include: [ master ]
+    event:
+      - push
+      - pull_request
+      
+- name: deploy
+  image: node:alpine
+  secrets: [ ssh_key ]
+  commands:
+    - npm install gulp
+    - npm run deploy
+  when:
+    branch:
+      include: [ master ]
+    event:
+      - push
+      - pull_request
