--- a/assets/staticData/projects.json
+++ b/assets/staticData/projects.json
@@ -1,36 +1,16 @@
 {
   "Styles": [
     {
-      "StyleName": "НАША СТУДИЯ",
-      "YouTubeLink": "https://www.youtube.com/embed/wxeUoyRo37M?rel=0"
+      "StyleName": "FORSAGE PRODUCTION",
+      "YouTubeLink": "https://www.youtube.com/embed/G93r3NfRCkw?rel=0"
     },
     {
-      "StyleName": "ПРОМО-ВИДЕО",
-      "YouTubeLink": "https://www.youtube.com/embed/wRANz_fVu0s?rel=0"
+      "StyleName": "URAL DANCE CAMP",
+      "YouTubeLink": "https://www.youtube.com/embed/W7foZJ6Ls0o?rel=0"
     },
     {
-      "StyleName": "HIP-HOP",
-      "YouTubeLink": "https://www.youtube.com/embed/K6tz-4d7XNk?rel=0"
-    },
-    {
-      "StyleName": "DANCEHALL",
-      "YouTubeLink": "https://www.youtube.com/embed/HaPSi7f4s8g?rel=0"
-    },
-    {
-      "StyleName": "VOGUE",
-      "YouTubeLink": "https://www.youtube.com/embed/IwpFnZfbVBI?rel=0"
-    },
-    {
-      "StyleName": "BREAKING",
-      "YouTubeLink": "https://www.youtube.com/embed/x6kBn0ilxYg?rel=0"
-    },
-    {
-      "StyleName": "LOCKING",
-      "YouTubeLink": "https://www.youtube.com/embed/0Vz0CMXbg8E?rel=0"
-    },
-    {
-      "StyleName": "POPPING",
-      "YouTubeLink": "https://www.youtube.com/embed/ELtqefMviW4?rel=0"
+      "StyleName": "DANCEHALL PULL UP",
+      "YouTubeLink": "https://www.youtube.com/embed/M3E-w4DZyW0?rel=0"
     }
   ]
 }
