--- a/assets/staticData/projects.json
+++ b/assets/staticData/projects.json
@@ -1,15 +1,15 @@
 {
-  "Styles": [
+  "Projects": [
     {
-      "StyleName": "FORSAGE PRODUCTION",
+      "ProjectName": "FORSAGE PRODUCTION",
       "YouTubeLink": "https://www.youtube.com/embed/G93r3NfRCkw?rel=0"
     },
     {
-      "StyleName": "URAL DANCE CAMP",
+      "ProjectName": "URAL DANCE CAMP",
       "YouTubeLink": "https://www.youtube.com/embed/W7foZJ6Ls0o?rel=0"
     },
     {
-      "StyleName": "DANCEHALL PULL UP",
+      "ProjectName": "DANCEHALL PULL UP",
       "YouTubeLink": "https://www.youtube.com/embed/M3E-w4DZyW0?rel=0"
     }
   ]
