--- a/assets/staticData/projects.json
+++ b/assets/staticData/projects.json
@@ -2,7 +2,7 @@
   "Projects": [
     {
       "ProjectName": "FORSAGE PRODUCTION",
-      "YouTubeLink": "https://www.youtube.com/embed/G93r3NfRCkw?rel=0"
+      "YouTubeLink": "https://www.youtube.com/embed/hH5mXZGaHII?rel=0"
     },
     {
       "ProjectName": "URAL DANCE CAMP",
